# getting-started-with-meson

startingmeson2/: meson.build
startingmeson2/src/myexe/: meson.build  startingmeson2.cpp
startingmeson2/src/mylib/: meson.build  mylib.cpp  mylib.hpp
startingmeson3/src/myexe/: meson.build
startingmeson3/src/mylib/: meson.build
